--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,22 +10,33 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="/pages/contacto.html">Contacto</a></li> <!-- Enlace a contacto.html -->    
-                <li><a href="/pages/servicios.html">Servicios</a></li> <!-- Enlace a servicios.html -->    
-                <li><a href="/pages/nosotros.html">Nosotros</a></li> <!-- Enlace a nosotros.html -->        
-                <li><a href="blog.html">Blog</a></li> <!-- Enlace a blog.html -->
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/imagenes/15-Frutilla positivo.png" alt="Logo" height="40">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/servicios.html">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
-    <main>
+    <main class="container my-5">
         <section>
-            <h1>Blog</h1>
-            <h2>Informados es MEJOR</h2>
-            <article>
+            <h1 class="text-center">Blog</h1>
+            <h2 class="text-center">Informados es MEJOR</h2>
+        <article>
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -69,17 +80,17 @@
         </section>
     </main>
 
-    <footer>
+<footer class="bg-light text-center py-3">
         <div>
             <h4> Síguenos en</h4>
-            <ul>
-                <li>Linkedin</li>
-                <li>Instagram</li>
-                <li>Facebook</li>
-                <li>TikTok</li>
+            <ul class="list-unstyled d-flex justify-content-center">
+                <li class="mx-3">Linkedin</li>
+                <li class="mx-3">Instagram</li>
+                <li class="mx-3">Facebook</li>
+                <li class="mx-3">TikTok</li>
             </ul>
         </div>
-    </footer>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
