--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -10,48 +10,64 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="/pages/contacto.html">Contacto</a></li> <!-- Enlace a contacto.html -->    
-                <li><a href="/pages/servicios.html">Servicios</a></li> <!-- Enlace a servicios.html -->    
-                <li><a href="nosotros.html">Nosotros</a></li> <!-- Enlace a nosotros.html -->        
-                <li><a href="/pages/blog.html">Blog</a></li> <!-- Enlace a blog.html -->
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/imagenes/15-Frutilla positivo.png" alt="Logo" height="40">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/servicios.html">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/blog.html">Blog</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-    <main>
-        <h1>Nosotros</h1>
-        <h2>¿Quienes somos?</h2>
-        <p>En MadeInCba, somos una agencia de marketing digital apasionada por impulsar marcas hacia el éxito. Con un equipo especializado en estrategias creativas, campañas publicitarias y optimización digital, ayudamos a empresas de todos los tamaños a conectar con su audiencia, aumentar su presencia online y maximizar sus resultados. Nos enfocamos en soluciones personalizadas que transforman ideas en acciones concretas, logrando un impacto medible en cada proyecto que emprendemos.</p>
-        <h3>Tu crecimiento es nuestro objetivo y estamos aquí para hacerlo realidad.</h3>
-    <article>
-        <div>
-            <img src="../imagenes/1708707612335.jpg" alt="imagen" width="250" height="250">
+    <main class="container my-5">
+        <div class="row">
+            <div class="col-12 text-center mb-4">
+                <h1>Nosotros</h1>
+                <h2>¿Quiénes somos?</h2>
+                <p>En MadeInCba, somos una agencia de marketing digital apasionada por impulsar marcas hacia el éxito. Con un equipo especializado en estrategias creativas, campañas publicitarias y optimización digital, ayudamos a empresas de todos los tamaños a conectar con su audiencia, aumentar su presencia online y maximizar sus resultados. Nos enfocamos en soluciones personalizadas que transforman ideas en acciones concretas, logrando un impacto medible en cada proyecto que emprendemos.</p>
+                <h3>Tu crecimiento es nuestro objetivo y estamos aquí para hacerlo realidad.</h3>
+            </div>
         </div>
-    </article>
-    <h3>Realizamos:</h3>
-        <ul>
-            <li>Producción audiovisual</li>
-            <li>Branding</li>
-            <li>Comunicación política</li>
-            <li>Desarrollo web</li>
-            <li>Comunicación integral</li>
-            <li>Diseño gráfico</li>
-        </ul>
+        <div class="row align-items-center">
+            <div class="col-4 text-center">
+                <img src="../imagenes/1708707612335.jpg" alt="Imagen del equipo" class="img-fluid rounded" style="max-width: 100%; height: auto;">
+            </div>
+        <div class="col-md-6">
+                <h3>Realizamos:</h3>
+                <ul class="list-unstyled fs-4">
+                    <li class="mb-2">✔ Producción audiovisual</li>
+                    <li class="mb-2">✔ Branding</li>
+                    <li class="mb-2">✔ Comunicación política</li>
+                    <li class="mb-2">✔ Desarrollo web</li>
+                    <li class="mb-2">✔ Comunicación integral</li>
+                    <li class="mb-2">✔ Diseño gráfico</li>
+                </ul>
+            </div>
+        </div>
     </main>
-    
-    <footer>
+
+<footer class="bg-light text-center py-3">
         <div>
             <h4> Síguenos en</h4>
-            <ul>
-                <li>Linkedin</li>
-                <li>Instagram</li>
-                <li>Facebook</li>
-                <li>TikTok</li>
+            <ul class="list-unstyled d-flex justify-content-center">
+                <li class="mx-3">Linkedin</li>
+                <li class="mx-3">Instagram</li>
+                <li class="mx-3">Facebook</li>
+                <li class="mx-3">TikTok</li>
             </ul>
         </div>
-    </footer>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
