--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,52 +9,57 @@
 
 </head>
 <body>
-    <header class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="/imagenes/15-Frutilla positivo.png" alt="">
-            </a>
-        </div>
-                <nav>
-                    <ul>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="/pages/contacto.html">Contacto</a></li> <!-- Enlace a contacto.html -->    
-                        <li><a href="servicios.html">Servicios</a></li> <!-- Enlace a servicios.html -->    
-                        <li><a href="/pages/nosotros.html">Nosotros</a></li> <!-- Enlace a nosotros.html -->        
-                        <li><a href="/pages/blog.html">Blog</a></li> <!-- Enlace a blog.html -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/imagenes/15-Frutilla positivo.png" alt="Logo" height="40">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/blog.html">Blog</a></li>
                     </ul>
-                </nav>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <section class="bg-cblue container">
         <h1>Servicios</h1>
             <div class="row">
-                <article class="col-6 col-md-2">
+                <article class="col-6">
                     <h2 class="subtitulo">Producción audiovisual</h2>
                     <p>Te ayudamos a contar tu historia. Creamos contenido audiovisual de alta calidad para impulsar tu comunicación. Nos ocupamos de todo el proceso creativo, desde la preproducción hasta la edición final. Ya sea un video corporativo, comercial o contenido para redes sociales, hacemos que tu mensaje conecte con tu audiencia.</p>
                 </article>
 
-                <article class="col-6 col-md-2">
+                <article class="col-6">
                     <h2 class="subtitulo">Branding</h2>
                     <p>Desarrollamos identidades de marca únicas y memorables que capturan la esencia de tu negocio. Ofrecemos talleres de marca, diseño de logotipos, paletas de colores y guías de estilo para asegurar una representación coherente y poderosa de tu marca.</p>
                 </article>
 
-                <article class="col-6 col-md-2">
+                <article class="col-6">
                     <h2 class="subtitulo">Comunicación política</h2>
                     <p>Diseñamos estrategias de comunicación política para influir y conectar con la ciudadanía. Realizamos estudios cuantitativos y cualitativos, desarrollamos estrategias integrales y ejecutamos la comunicación para gobiernos y campañas electorales de manera efectiva.</p>
                 </article>
 
-                <article class="col-6 col-md-2">
+                <article class="col-6">
                     <h2 class="subtitulo">Desarrollo web</h2>
                     <p>Diseñamos y desarrollamos sitios web funcionales, modernos y optimizados para dispositivos móviles. Además, integramos estrategias de SEO para mejorar tu visibilidad en los motores de búsqueda y nos aseguramos de que tu web sea atractiva, rápida y fácil de navegar.</p>
                 </article>
 
-                <article class="col-6 col-md-2">
+                <article class="col-6">
                     <h2 class="subtitulo">Comunicación integral</h2>
                     <p>Gestionamos tu comunicación a través de canales tradicionales y digitales. Con una planificación estratégica, maximizamos tus recursos para impactar en tu público objetivo de manera efectiva.</p>
                 </article>
 
-                <article class="col-6 col-md-2">
+                <article class="col-6">
                     <h2 class="subtitulo">Diseño gráfico</h2>
                     <p>Diseñamos elementos visuales impactantes que capturan la atención y comunican tu mensaje de manera efectiva. Desde cartelería y papelería hasta gráficos e infografías, nuestro objetivo es hacer que tu contenido visual destaque y resuene con tu audiencia.</p>
                 </article>
@@ -63,17 +68,17 @@
         </section>
     </main>
 
-    <footer>
+<footer class="bg-light text-center py-3">
         <div>
             <h4> Síguenos en</h4>
-            <ul>
-                <li>Linkedin</li>
-                <li>Instagram</li>
-                <li>Facebook</li>
-                <li>TikTok</li>
+            <ul class="list-unstyled d-flex justify-content-center">
+                <li class="mx-3">Linkedin</li>
+                <li class="mx-3">Instagram</li>
+                <li class="mx-3">Facebook</li>
+                <li class="mx-3">TikTok</li>
             </ul>
         </div>
-    </footer>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
