Arregle las rutas

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/imagenes/15-Frutilla positivo.png" alt="Logo" height="40">
+                    <img src="../imagenes/15-Frutilla positivo.png" alt="Logo" height="40">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,10 +22,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/pages/contacto.html">Contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/pages/servicios.html">Servicios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/pages/nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./servicios.html">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -45,21 +45,21 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="/imagenes/pexels-thisisengineering-3861958.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/pexels-thisisengineering-3861958.jpg" class="d-block w-100" alt="Ultimas noticias de diseño">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Elementos para el diseño de una página web</h5>
                         <p>Los cinco elementos recomendados</p>
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img src="/imagenes/pexels-ocko-geserick-3802337-5633334.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/pexels-ocko-geserick-3802337-5633334.jpg" class="d-block w-100" alt="Impacto de las redes">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Maximiza tu Impacto en Redes</h5>
                         <p>Conecta con tu Público en las Plataformas Claves</p>
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img src="/imagenes/pexels-eva-bronzini-6956301.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/pexels-eva-bronzini-6956301.jpg" class="d-block w-100" alt="Impulsa tu marca en redes">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Impulsa tu Marca en Redes Sociales</h5>
                         <p>Estrategias para Aumentar tu Visibilidad y Conectar con tu Audiencia</p>
