--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/imagenes/15-Frutilla positivo.png" alt="Logo" height="40">
+                    <img src="./imagenes/15-Frutilla positivo.png" alt="Logo" height="40">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,19 +62,19 @@
         <div class="slider-container">
             <div class="slider row caja-bloque">
                 <div class="col-md-3">
-                    <img src="/imagenes/cartas org.jpg" class="img-fluid" alt="Imagen 1">
+                    <img src="./imagenes/cartas org.jpg" class="img-fluid" alt="Imagen 1">
                     <h3>Rediseño a la marca ORG</h3>
                 </div>
                 <div class="col-md-3">
-                    <img src="/imagenes/cartas.jpg" class="img-fluid" alt="Imagen 2">
+                    <img src="./imagenes/cartas.jpg" class="img-fluid" alt="Imagen 2">
                     <h3>Nuevas tarjetas al emprendimiento KULTIV</h3>
                 </div>
                 <div class="col-md-3">
-                        <img src="/imagenes/logo.png" class="img-fluid" alt="Imagen 3">
+                        <img src="./imagenes/logo.png" class="img-fluid" alt="Imagen 3">
                         <h3>Rediseño de marca</h3>
                 </div>
                 <div class="col-md-3">
-                        <img src="/imagenes/packaging.png" class="img-fluid" alt="Imagen 4">
+                        <img src="./imagenes/packaging.png" class="img-fluid" alt="Imagen 4">
                         <h3>Packaging a Chocobar</h3>
                 </div>
             </div>
