--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Madeincba</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 
 <body>
@@ -49,17 +50,17 @@
 
     
             <div class="row text-center ">
-                <div class="col-md-6 caja-mision, caja-vision">
+                <div class="col-md-6 caja-mision, caja-vision" data-aos="zoom-in-right">
                     <h2>Misión</h2>
                         <p>Ofrecer productos y servicios de calidad, creando valor para nuestros clientes y armonizando con la comunidad a través de una dirección innovadora, caracterizada por el respeto y compromiso con el cliente y el equipo de trabajo.</p>
                 </div>
-                <div class="col-md-6 caja-mision, caja-vision">
+                <div class="col-md-6 caja-mision, caja-vision" data-aos="zoom-in-left">
                         <h2>Visión</h2>
                         <p>Consolidar nuestra participación en el mercado nacional e internacional, logrando un crecimiento sostenible y responsable que contribuya al bienestar y progreso de nuestros colaboradores, entorno y sociedad.</p>
                 </div>
             </div>
 
-        <div class="slider-container">
+        <div class="slider-container" data-aos="zoom-in">
             <div class="slider row caja-bloque">
                 <div class="col-md-3">
                     <img src="./imagenes/cartas org.jpg" class="img-fluid" alt="Imagen 1">
@@ -80,9 +81,7 @@
             </div>
         </div>
     </main>
-
     
-</body>
 
 <footer class="bg-light text-center py-3">
     <div>
@@ -94,6 +93,11 @@
             <li class="mx-3">TikTok</li>
         </ul>
     </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        // Inicializa AOS
+        AOS.init();
+    </script>
 </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
