--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,6 +6,7 @@
     <title>Nosotros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 
 </head>
 <body>
@@ -39,11 +40,11 @@
                 <h3>Tu crecimiento es nuestro objetivo y estamos aquí para hacerlo realidad.</h3>
             </div>
         </div>
-        <div class="row align-items-center">
+        <div class="row align-items-center" data-aos="fade-right">
             <div class="col-4 text-center">
                 <img src="../imagenes/1708707612335.jpg" alt="Imagen del equipo" class="img-fluid rounded" style="max-width: 100%; height: auto;">
             </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="fade-down-left">
                 <h3>Realizamos:</h3>
                 <ul class="list-unstyled fs-4">
                     <li class="mb-2">✔ Producción audiovisual</li>
@@ -56,7 +57,11 @@
             </div>
         </div>
     </main>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        // Inicializa AOS
+        AOS.init();
+</script>
 <footer class="bg-light text-center py-3">
         <div>
             <h4> Síguenos en</h4>
