--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,6 +6,7 @@
     <title>Servicios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 
 </head>
 <body>
@@ -33,7 +34,7 @@
     <main>
         <section class="bg-cblue container">
         <h1>Servicios</h1>
-            <div class="row">
+            <div class="row" data-aos="fade-right">
                 <article class="col-6">
                     <h2 class="subtitulo">Producción audiovisual</h2>
                     <p>Te ayudamos a contar tu historia. Creamos contenido audiovisual de alta calidad para impulsar tu comunicación. Nos ocupamos de todo el proceso creativo, desde la preproducción hasta la edición final. Ya sea un video corporativo, comercial o contenido para redes sociales, hacemos que tu mensaje conecte con tu audiencia.</p>
@@ -67,7 +68,11 @@
             </div>
         </section>
     </main>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        // Inicializa AOS
+        AOS.init();
+</script>
 <footer class="bg-light text-center py-3">
         <div>
             <h4> Síguenos en</h4>
