especifiqué mas mis ALT de las imgenes

--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
         <div class="slider-container" data-aos="zoom-in">
             <div class="slider row caja-bloque">
                 <div class="col-md-3">
-                    <img src="./imagenes/cartas org.jpg" class="img-fluid" alt="Imagen 1">
+                    <img src="./imagenes/cartas org.jpg" class="img-fluid" alt="Rediseño de cards a la empresa ORG">
                     <h3>Rediseño a la marca ORG</h3>
                 </div>
                 <div class="col-md-3">
-                    <img src="./imagenes/cartas.jpg" class="img-fluid" alt="Imagen 2">
+                    <img src="./imagenes/cartas.jpg" class="img-fluid" alt="Nuevas tarjetas para el emprendimiento KULTIV">
                     <h3>Nuevas tarjetas al emprendimiento KULTIV</h3>
                 </div>
                 <div class="col-md-3">
-                        <img src="./imagenes/logo.png" class="img-fluid" alt="Imagen 3">
+                        <img src="./imagenes/logo.png" class="img-fluid" alt="Rediseño a la marca BeautPro">
                         <h3>Rediseño de marca</h3>
                 </div>
                 <div class="col-md-3">
-                        <img src="./imagenes/packaging.png" class="img-fluid" alt="Imagen 4">
+                        <img src="./imagenes/packaging.png" class="img-fluid" alt="Packaging a Chocobar">
                         <h3>Packaging a Chocobar</h3>
                 </div>
             </div>
