--- a/pages/blog.html
+++ b/pages/blog.html
@@ -60,7 +60,7 @@
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img src="../imagenes/pexels-eva-bronzini-6956301.jpg" class="d-block w-100" alt="Impulsa tu marca en redes">
+                    <img src="../imagenes/pexels-eva-bronzini-6956301.jpg" class="d-block w-100" alt="Impulsa tu marca en las redes sociales">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Impulsa tu Marca en Redes Sociales</h5>
                         <p>Estrategias para Aumentar tu Visibilidad y Conectar con tu Audiencia</p>
